# arshade

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
docs/: ROADMAP.md  TODO.md
gooeycade/: __main__.py
gooeycade/app/: __init__.py  comp_manager.py  component.py  core.py  shader.py  window.py
gooeycade/app/components/: __init__.py
gooeycade/app/components/mandala/: view.py
gooeycade/app/components/mandala/shaders/: parallel_spiral_orbit.glsl
gooeycade/app/components/meshviz/: view.py
gooeycade/app/components/swarm/: view.py
gooeycade/app/components/swarm/shaders/: vert.glsl
gooeycade/app/components/wriggler/: view.py
gooeycade/app/views/: __init__.py  meta.py  pause.py  primary.py  shader.py
gooeycade/app/views/mandala/: view.py
gooeycade/app/views/mandala/shaders/: geom.glsl  sincos_orbit.glsl
gooeycade/app/views/meshviz/: view.py
gooeycade/app/views/shader/: __init__.py  shader.py
gooeycade/app/views/shader/mandala/: view.py  (+2 more)
gooeycade/app/views/swarm/: view.py
gooeycade/components/: README.md  __init__.py  meta.py  pause.py  primary.py
gooeycade/components/mandala/: descriptions.py  view.py
gooeycade/components/meshviz/: mesh.py  octree.py  view.py
gooeycade/components/meshviz/shaders/: octree_compute.glsl
gooeycade/components/particle_fluid/: fluid.py  utils.py  view.py
gooeycade/components/swarm/: swarm.py  view.py
gooeycade/components/tiler/: view.py
gooeycade/components/wriggler/: view.py
gooeycade/shaders/basic/: frag.glsl  vert.glsl
gooeycade/shaders/swarm/: compute.glsl  frag.glsl
(+16 files in other folders)
